fix: adjusted avatar margin in responsive styles as the avatar covers the text in mobile mode

--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -11,16 +11,14 @@
 @media (max-width: 768px) {
   .avatar-large {
     width: 250px;
-
-    margin-top: -48px;
+    margin-top: 15px;
   }
 }
 
 @media (max-width: 576px) {
   .avatar-large {
     width: 200px;
-
-    margin-top: -48px;
+    margin-top: 15px;
   }
 }
 
